--- a/dash.html
+++ b/dash.html
@@ -17,7 +17,8 @@
             </div>
         </div>
 
-        <div class="side-bar">    
+        <div class="side-bar">  
+            <button id="toggleButton">Toggle Menu</button>  
             <div class="menu">
                 <ul>
 
@@ -81,7 +82,9 @@
                 </ul>
             </div>
         </div>
+    <script src="dash.js"></script>  
     </body>
 </html>
 
+       
        
